--- a/layouts/city/list.html
+++ b/layouts/city/list.html
@@ -8,40 +8,22 @@
             </div>
           </div>
         <div class="columns">
+          {{ partial "search.html" . }}
+
             <div class="column is-8 ascend">
               <div class="tabs is-centered">
                 <ul>
                   <li><a href="/listings">All Listings({{ len ( where $.Site.RegularPages "Type" "listings") }})</a></li>
                     <li><a href="/featured">Featured</a></li>
-                    {{ range $name, $taxonomy := .Site.Taxonomies.status }}
+                    {{ range $name, $taxonomy := .Site.Taxonomies.states }}
                   <li>
-                    <a href="/status/{{ $name | urlize }}">{{ $name | humanize }} ({{ $taxonomy.Count }})</a>
+                    <a href="/states/{{ $name | urlize }}">{{ $name | humanize }} ({{ $taxonomy.Count }})</a>
                   </li>
                   {{end}}
             
                   <li>
                 </ul>
               </div>
-              
-<section>
-  <ul>
-    {{ range $taxonomyname, $taxonomy := .Site.Taxonomies }}
-      <li><a href="{{ "/" | relLangURL}}{{ $taxonomyname | urlize }}">{{ $taxonomyname }}</a>
-        <ul>
-          {{ range $key, $value := $taxonomy }}
-          <li> {{ $key }} </li>
-                <ul>
-                {{ range $value.Pages }}
-                    <li><a href="{{ .Permalink}}"> {{ .LinkTitle }} </a> </li>
-                {{ end }}
-                </ul>
-          {{ end }}
-        </ul>
-      </li>
-    {{ end }}
-  </ul>
-</section>
-
                 <div class="columns is-multiline">
                 {{ $paginator := .Paginate (where .Pages "Type" "listings") 6 }}
                 {{ range $paginator.Pages.ByWeight }}
@@ -52,7 +34,6 @@
                 </div>
                 {{ partial "pagination" . }}
             </div>
-            {{ partial "sidebar.html" . }}
         </div>
     </div>
 </div>
