--- a/layouts/partials/featured-listings.html
+++ b/layouts/partials/featured-listings.html
@@ -10,7 +10,7 @@
     <div class="listing-bottom" style="position:absolute;bottom:0">
         <ul>
             <li class="list-description">{{ .Params.short_description }}</li>
-            <li class="listing-address"><i class="fas fa-map-marker-alt"></i>{{ .Params.address.city }}, {{ .Params.address.state }} {{ .Params.address.zip_code }}</li>
+            <li class="listing-address"><i class="fas fa-map-marker-alt"></i>{{ .Params.city }}, {{ .Params.state }} {{ .Params.zip }}</li>
         </ul>
     </div>
   </div>
