--- a/layouts/listings/list.html
+++ b/layouts/listings/list.html
@@ -8,6 +8,8 @@
             </div>
           </div>
         <div class="columns">
+          {{ partial "search.html" . }}
+
             <div class="column is-8 ascend">
               <div class="tabs is-centered">
                 <ul>
@@ -33,7 +35,6 @@
                 </div>
                 {{ partial "pagination" . }}
             </div>
-            {{ partial "sidebar.html" . }}
         </div>
     </div>
 </div>
