--- a/layouts/listings/single.html
+++ b/layouts/listings/single.html
@@ -1,7 +1,4 @@
 {{ define "main" }}
-
-  
-</div>
 <div class="section listing-header-description" style="padding-bottom: 0">
   <div class="container">
     <div class="columns">
@@ -17,7 +14,7 @@
               <div class="content single-listing-head">
                 <h1 class="title is-4">{{ .Params.short_description }}</h1>
                 <span style="{{ safeHTMLAttr (printf "background-color: %s" $.Site.Data.design.colors.button_background_colors) }}">{{ .Params.status }}</span>
-                <address><i class="fas fa-map-marker-alt"></i> {{ .Params.address.address }} {{ .Params.address.city }}, {{ .Params.address.state }} {{ .Params.address.zip_code }} </address><br>
+                <address><i class="fas fa-map-marker-alt"></i> {{ .Params.address }} {{ .Params.city }}, {{ .Params.state }} {{ .Params.zip }} </address><br>
              </div>
             </div>
       </div>
