--- a/layouts/status/list.html
+++ b/layouts/status/list.html
@@ -9,14 +9,16 @@
           </div>
         <div class="columns">
           {{ partial "search.html" . }}
+
             <div class="column is-8 ascend">
+              
               <div class="tabs is-centered">
                 <ul>
                   <li><a href="/listings">All Listings({{ len ( where $.Site.RegularPages "Type" "listings") }})</a></li>
                     <li><a href="/featured">Featured</a></li>
-                    {{ range $name, $taxonomy := .Site.Taxonomies.states }}
+                    {{ range $name, $taxonomy := .Site.Taxonomies.status }}
                   <li>
-                    <a href="/states/{{ $name | urlize }}">{{ $name | humanize }} ({{ $taxonomy.Count }})</a>
+                    <a href="/status/{{ $name | urlize }}">{{ $name | humanize }} ({{ $taxonomy.Count }})</a>
                   </li>
                   {{end}}
             
@@ -27,7 +29,7 @@
                 {{ $paginator := .Paginate (where .Pages "Type" "listings") 6 }}
                 {{ range $paginator.Pages.ByWeight }}
                     <div class="column is-6">   
-                        {{ partial "featured-listings.html" . }}         
+                        {{ partial "featured-listings.html" . }}       
                     </div>   
                 {{ end }}
                 </div>
